commit all the changes made for application

--- a/src/main/resources/templates/viewAll.vm
+++ b/src/main/resources/templates/viewAll.vm
@@ -13,7 +13,8 @@
 </select>
 <input type="submit" name="search" value="search"/>
 </form>
-
+<br/>
+<a href="/showCart">Show Cart</a>
 <table border="1">
 <tr>
  <th>Movie Name</th>
